[package]
name = "borc"
version = "0.2.0"
edition = "2021"
description = "CBOR done right"
repository = "https://github.com/na-sa-do/borc"
license = "MIT OR Apache-2.0"
keywords = ["cbor"]
categories = ["encoding"]

[dependencies]
chrono = { version = "0.4.22", optional = true }
half = "2.1.0"
thiserror = "1.0.31"